# arch-env

./: .gitignore  Makefile  README.md  arch-env.toml  pyproject.toml
scripts/: smoke_dev_package_managers.py
src/arch_env/: __init__.py  __main__.py  cli.py  commands.py  config.py  environment.py  errors.py  metadata.py  paths.py  prerequisites.py  runner.py  tui.py
tests/: test_cli.py  test_commands.py  test_config.py  test_environment.py  test_paths.py  test_runner.py  test_smoke_script.py  test_tui.py
